--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img width="500" src="img/rat.jpg" alt="">
+    <div class="left-side-bar">
+
+    </div>
+    <div class="right-side-bar">
+        <p>dummy text</p>
+    </div>
 </body>
 </html>
 
