Setup page scaffolding

--- a/index.html
+++ b/index.html
@@ -8,10 +8,44 @@
 </head>
 <body>
     <div class="left-side-bar">
-
+        <img width="100px" height="auto" src="img/rat-icon.svg" alt="">
+        <h1>Rat City</h1>
     </div>
     <div class="right-side-bar">
-        <p>dummy text</p>
+        <div class="heading">
+            <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started.</p>
+            <p>You know you want to.</p>
+        </div>
+        <div class="sign-up-area">
+            <p>Let's do this!</p>
+            <form action="" method="get">
+                <div class="form-row">
+                    <label for="first-name">First Name</label>
+                    <input id="first-name" name="first-name" type="text">
+
+                    <label for="last-name">Last Name</label>
+                    <input id="last-name" name="last-name" type="text">
+                </div>
+                <div class="form-row">
+                    <label for="email">Email</label>
+                    <input id="email" name="email" type="text">
+
+                    <label for="phone">Phone Number</label>
+                    <input id="phone" name="phone" type="text">
+                </div>
+                <div class="form-row">
+                    <label for="password">Password</label>
+                    <input id="password" name="password" type="text">
+
+                    <label for="password-confirm">Confirm Password</label>
+                    <input id="password-confirm" name="password-confirm" type="text">
+                </div>
+            </form>
+        </div>
+        <div class="bottom">
+            <button>Create Account</button>
+            <p>Already have an account? Log in</p>
+        </div>
     </div>
 </body>
 </html>
