Begin styling header area

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </div>
     <div class="right-side-bar">
         <div class="heading">
-            <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started.</p>
-            <p>You know you want to.</p>
+            <h6>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started.</h6>
+            <h6>You know you want to.</h6>
         </div>
         <div class="sign-up-area">
             <p>Let's do this!</p>
