--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h6>You know you want to.</h6>
         </div>
         <div class="sign-up-area">
-            <p>Let's do this!</p>
+            <h6>Let's do this!</h6>
             <form action="" method="get">
                 <div class="form-row">
                     <label for="first-name">First Name</label>
