change theme including css and images

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <div class="left-side-bar">
-        <img width="100px" height="auto" src="img/rat-icon.svg" alt="">
-        <h1>Rat City</h1>
+        <div class="text-background">
+            <img height="45px" src="img/umbrella.svg" alt="">
+            <h1>DRIZZLE</h1>
+        </div>
     </div>
     <div class="right-side-bar">
         <div class="heading">
@@ -50,4 +52,5 @@
 </body>
 </html>
 
-<!-- img credit: https://unsplash.com/@frenjaminbenklin -->
+<!--<a href="https://unsplash.com/@clemono?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Clem Onojeghuo</a> on <a href="https://unsplash.com/photos/xZRcXgLrEsU?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+   -->
