Move font import to html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-Up Form</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="left-side-bar">
@@ -16,7 +19,7 @@
     <div class="right-side-bar">
         <div class="heading">
             <h2>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started.</h2>
-            <h2>You know you want to.</h2>
+            <h2>You <em>know</em> you want to.</h2>
         </div>
         <div class="sign-up-area">
             <h2>Let's do this!</h2>
