--- a/index.html
+++ b/index.html
@@ -25,25 +25,36 @@
             <h2>Let's do this!</h2>
             <form action="" method="get">
                 <div class="form-row">
-                    <label for="first-name">First Name</label>
-                    <input id="first-name" name="first-name" type="text">
-
-                    <label for="last-name">Last Name</label>
-                    <input id="last-name" name="last-name" type="text">
+                    <div class="form-item">
+                        <label for="first-name">First Name</label>
+                        <input id="first-name" name="first-name" type="text">
+                    </div>
+                    <div class="form-item">
+                        <label for="last-name">Last Name</label>
+                        <input id="last-name" name="last-name" type="text">
+                    </div>
                 </div>
                 <div class="form-row">
-                    <label for="email">Email</label>
-                    <input id="email" name="email" type="text">
+                    <div class="form-item">
+                        <label for="email">Email</label>
+                        <input id="email" name="email" type="text">
+                    </div>
 
-                    <label for="phone">Phone Number</label>
-                    <input id="phone" name="phone" type="text">
+                    <div class="form-item">
+                        <label for="phone">Phone Number</label>
+                        <input id="phone" name="phone" type="text">
+                    </div>
                 </div>
                 <div class="form-row">
-                    <label for="password">Password</label>
-                    <input id="password" name="password" type="text">
+                    <div class="form-item">
+                        <label for="password">Password</label>
+                        <input id="password" name="password" type="text">
+                    </div>
 
-                    <label for="password-confirm">Confirm Password</label>
-                    <input id="password-confirm" name="password-confirm" type="text">
+                    <div class="form-item">
+                        <label for="password-confirm">Confirm Password</label>
+                        <input id="password-confirm" name="password-confirm" type="text">
+                    </div>
                 </div>
             </form>
         </div>
