--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="form-row">
                     <div class="form-item">
                         <label for="email">Email</label>
-                        <input id="email" name="email" type="text">
+                        <input id="email" name="email" type="text" placeholder="email@example.com">
                     </div>
 
                     <div class="form-item">
