--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="form-row">
                     <div class="form-item">
                         <label for="email">Email</label>
-                        <input id="email" name="email" type="text" placeholder="email@example.com">
+                        <input id="email" name="email" type="email" placeholder="email@example.com">
                     </div>
 
                     <div class="form-item">
@@ -56,10 +56,12 @@
                         <input id="password-confirm" name="password-confirm" type="text">
                     </div>
                 </div>
+                <div class="form-row">
+                    <button>Submit</button>
+                </div>
             </form>
         </div>
         <div class="bottom">
-            <button>Create Account</button>
             <p>Already have an account? Log in</p>
         </div>
     </div>
