--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </form>
         </div>
         <div class="bottom">
-            <p>Already have an account? Log in</p>
+            <p>Already have an account? <a href="">Log in</a></p>
         </div>
     </div>
 </body>
