--- a/index.html
+++ b/index.html
@@ -27,33 +27,33 @@
                 <div class="form-row">
                     <div class="form-item">
                         <label for="first-name">First Name</label>
-                        <input id="first-name" name="first-name" type="text">
+                        <input id="first-name" name="first-name" type="text" required/>
                     </div>
                     <div class="form-item">
                         <label for="last-name">Last Name</label>
-                        <input id="last-name" name="last-name" type="text">
+                        <input id="last-name" name="last-name" type="text" required/>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-item">
                         <label for="email">Email</label>
-                        <input id="email" name="email" type="email" placeholder="email@example.com">
+                        <input id="email" name="email" type="email" placeholder="email@example.com" required/>
                     </div>
 
                     <div class="form-item">
                         <label for="phone">Phone Number</label>
-                        <input id="phone" name="phone" type="text">
+                        <input id="phone" name="phone" type="text" pattern="\d{3}[\-]\d{3}[\-]\d{4}" placeholder="123-456-7890" required />
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-item">
                         <label for="password">Password</label>
-                        <input id="password" name="password" type="text">
+                        <input id="password" name="password" type="text" required />
                     </div>
 
                     <div class="form-item">
                         <label for="password-confirm">Confirm Password</label>
-                        <input id="password-confirm" name="password-confirm" type="text">
+                        <input id="password-confirm" name="password-confirm" type="text" required />
                     </div>
                 </div>
                 <div class="form-row">
