Add validation and css

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 <div class="form-row">
                     <div class="form-item">
                         <label for="first-name">First Name</label>
-                        <input id="first-name" name="first-name" type="text" required/>
+                        <input id="first-name" name="first-name" type="text" placeholder="Joe" pattern="[a-zA-Z]+" required/>
                     </div>
                     <div class="form-item">
                         <label for="last-name">Last Name</label>
-                        <input id="last-name" name="last-name" type="text" required/>
+                        <input id="last-name" name="last-name" type="text" placeholder="Shmoe" pattern="[a-zA-Z]+" required/>
                     </div>
                 </div>
                 <div class="form-row">
@@ -48,12 +48,12 @@
                 <div class="form-row">
                     <div class="form-item">
                         <label for="password">Password</label>
-                        <input id="password" name="password" type="text" required />
+                        <input id="password" name="password" placeholder="*******" type="text" required />
                     </div>
 
                     <div class="form-item">
                         <label for="password-confirm">Confirm Password</label>
-                        <input id="password-confirm" name="password-confirm" type="text" required />
+                        <input id="password-confirm" name="password-confirm" placeholder="*******" type="text" required />
                     </div>
                 </div>
                 <div class="form-row">
