--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
         <div class="bottom">
             <p>Already have an account? <a href="">Log in</a></p>
         </div>
+        <div class="image-credit">
+            <h4>Photo by <a href="https://unsplash.com/@clemono?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Clem Onojeghuo</a> on <a href="https://unsplash.com/photos/xZRcXgLrEsU?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></h4>
+        </div>
     </div>
 </body>
 </html>
