Add github link to footer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="left-side-bar">
         <div class="text-background">
-            <img height="45px" src="img/umbrella.svg" alt="">
+            <img class="umbrella-icon" height="45px" src="img/umbrella.svg" alt="">
             <h1>DRIZZLE</h1>
         </div>
     </div>
@@ -65,12 +65,13 @@
         <div class="bottom">
             <p>Already have an account? <a href="">Log in</a></p>
         </div>
-        <div class="image-credit">
+        <div class="footer">
+            <div class="github">
+                <img class="github-icon" height="18px" src="img/github.svg" alt="">
+                <h2><a href="https://github.com/fjarm/Sign-Up-Form">Github</a></h2>
+            </div>
             <h4>Photo by <a href="https://unsplash.com/@clemono?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Clem Onojeghuo</a> on <a href="https://unsplash.com/photos/xZRcXgLrEsU?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></h4>
         </div>
     </div>
 </body>
 </html>
-
-<!--<a href="https://unsplash.com/@clemono?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Clem Onojeghuo</a> on <a href="https://unsplash.com/photos/xZRcXgLrEsU?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-   -->
